--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
     <div >
       <ion-card *ngIf="ocultar">
         <ion-label class="ion-padding">
-          <h2><strong>{{email}}</strong></h2>
+          <h2><strong>{{comidacart.userId}}</strong></h2>
           <p>Fecha: {{comidacart.fecha}}</p>
           <p>Hora: {{comidacart.hora}}</p>
           <p>Comida: {{comidacart.comida}}</p>
